cross-env installed

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "",
@@ -30,5 +30,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "win-node-env": "^0.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.3"
   }
 }
